--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -2,11 +2,11 @@
 $white: #fff
 $gray: #d9d9d9
 $darkgray: #333333
-$black: #282222
+$black: #000
 
-$accent: #b62424
+$accent: #de6f16
 
 
 //fonts
-$font-main: 'Playfair Display', serif
-$font-second: 'Lora', serif
+$font-main: 'True Crime', sans
+$font-second: 'Josefin Sans', sans-serif
