--- a/styles/sass/1-base/_common.sass
+++ b/styles/sass/1-base/_common.sass
@@ -17,18 +17,28 @@ body
 
 .wrapper
   width: 2480px
-  max-width: 70%
+  max-width: 85%
   margin: 0 auto
 
 h1, h2, h3, h4, h5, h6
   font-family: $font-main
 
-p, a
+p, a, ul, ol, li
   font-family: $font-second
 
 a
+  color: $white
   transition: all ease-in-out 0.2s
   text-decoration: none
+  text-transform: capitalize
   &:hover
-    border-bottom: 2px solid $white
+    font-size: 1.2em
     cursor: pointer
+
+section
+  height: 100vh
+  width: 100vw
+  overflow: hidden
+  .wrapper
+    height: 100%
+    width: 100%
