--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -2,6 +2,8 @@
 
 @import "mixins"
 
+@import "fonts"
+
 @import "0-plugins/plugins-dir"
 @import "1-base/base-dir"
 @import "2-modules/modules-dir"
