--- a/styles/sass/3-layouts/_splash.sass
+++ b/styles/sass/3-layouts/_splash.sass
@@ -2,8 +2,7 @@
 
 #splash
   //+bkg-img("../../assets/img/img-splash.png", center, center)
-  height: 100vh
-  width: 100vw
+  padding: 0
 
   .wrapper
     +flex-col
@@ -36,40 +35,55 @@
       video
         position: absolute
         z-index: 0
-        min-height: 100%
+        height: 100%
         min-width: 100%
+        object-fit: cover
+
+      #vid-main
+        @media all and (max-width: 860px)
+          display: none
+      #vid-mobile
+        display: none
+        @media all and (max-width: 860px)
+          display: inline-block
 
     .text
       +flex-col
-      flex-direction: column-reverse
+      display: none
       align-items: center
       justify-content: center
       z-index: 2
       width: 100%
       height: 100%
+      @media all and (max-width: 860px)
+        display: flex
 
       h1, p
-        color: shade($white, 10%)
+        color: $white
 
       h1
         +transition(all, .2s, ease-in-out)
         text-transform: uppercase
         text-align: center
-        font-size: 10em
-        line-height: .95
+        font-size: 7em
+        line-height: .85
         margin: 0
         letter-spacing: .05em
-
-        @media all and (max-width: 830px)
-          font-size: 7em
-
-        @media all and (max-width: 600px)
-          font-size: 5.6em
-
+        @media all and (max-width: 645px)
+          font-size: 5.5em
+        @media all and (max-width: 500px)
+          font-size: 4.5em
         @media all and (max-width: 400px)
-          font-size: 4em
-
+          font-size: 3.25em
       p
-        margin: 0 0 .5em 0
+        margin: .5em 0 0 0
         font-size: 1.5em
-        text-transform: capitalize
+        text-transform: uppercase
+        font-weight: 600
+        font-style: italic
+        @media all and (max-width: 645px)
+          font-size: 1.2em
+        @media all and (max-width: 500px)
+          font-size: 1.1em
+        @media all and (max-width: 400px)
+          font-size: 1em
