--- a/styles/sass/3-layouts/_drink-block.sass
+++ b/styles/sass/3-layouts/_drink-block.sass
@@ -79,6 +79,7 @@
           padding: 1.05em 1em
           z-index: 2
           font-weight: 300
+          margin: 0
           @media all and (max-width: 450px)
             //font-size: .85em
 
@@ -99,10 +100,9 @@
         font-size: 1.1em
         @media all and (max-width: 450px)
           padding: 1em
+          margin-top: -.1px
 
         p
-          @media all and (max-width: 450px)
-            //font-size: 1em
         .review
           margin: 0
           font-weight: 300
