--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -313,8 +313,9 @@ footer {
         /* line 28, ../sass/3-layouts/_gallery.sass */
         #gallery .wrapper a .gallery-block:hover {
           transform: scale(1.1);
-          cursor: pointer; }
-        /* line 32, ../sass/3-layouts/_gallery.sass */
+          cursor: pointer;
+          z-index: 2; }
+        /* line 33, ../sass/3-layouts/_gallery.sass */
         #gallery .wrapper a .gallery-block h2 {
           -webkit-transition: all 0.2s ease-in-out;
           -moz-transition: all 0.2s ease-in-out;
@@ -328,85 +329,85 @@ footer {
           text-align: center;
           text-transform: uppercase; }
           @media all and (max-width: 776px) {
-            /* line 32, ../sass/3-layouts/_gallery.sass */
+            /* line 33, ../sass/3-layouts/_gallery.sass */
             #gallery .wrapper a .gallery-block h2 {
               opacity: 1; } }
-      /* line 43, ../sass/3-layouts/_gallery.sass */
+      /* line 44, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-broomstick, #gallery .wrapper a #img-piranha, #gallery .wrapper a #img-kidcob {
         align-items: flex-start; }
-      /* line 46, ../sass/3-layouts/_gallery.sass */
+      /* line 47, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-deweyFizz {
         background-image: url("../../assets/img/monsterSmashed01.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 46, ../sass/3-layouts/_gallery.sass */
+          /* line 47, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-deweyFizz {
             background-image: url("../../assets/img/deweyFizz.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; } }
-      /* line 50, ../sass/3-layouts/_gallery.sass */
+      /* line 51, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-broomstick {
         background-image: url("../../assets/img/monsterSmashed02.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 50, ../sass/3-layouts/_gallery.sass */
+          /* line 51, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-broomstick {
             background-image: url("../../assets/img/broomstick.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; } }
-      /* line 54, ../sass/3-layouts/_gallery.sass */
+      /* line 55, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-ectoplasm {
         background-image: url("../../assets/img/monsterSmashed03.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 54, ../sass/3-layouts/_gallery.sass */
+          /* line 55, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-ectoplasm {
             background-image: url("../../assets/img/ectoplasm.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; } }
-      /* line 58, ../sass/3-layouts/_gallery.sass */
+      /* line 59, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-piranha {
         background-image: url("../../assets/img/monsterSmashed04.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 58, ../sass/3-layouts/_gallery.sass */
+          /* line 59, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-piranha {
             background-image: url("../../assets/img/piranha.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; } }
-      /* line 62, ../sass/3-layouts/_gallery.sass */
+      /* line 63, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-gravesite {
         background-image: url("../../assets/img/monsterSmashed05.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 62, ../sass/3-layouts/_gallery.sass */
+          /* line 63, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-gravesite {
             background-image: url("../../assets/img/gravesite.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; } }
-      /* line 66, ../sass/3-layouts/_gallery.sass */
+      /* line 67, ../sass/3-layouts/_gallery.sass */
       #gallery .wrapper a #img-kidcob {
         background-image: url("../../assets/img/monsterSmashed06.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
         @media all and (max-width: 776px) {
-          /* line 66, ../sass/3-layouts/_gallery.sass */
+          /* line 67, ../sass/3-layouts/_gallery.sass */
           #gallery .wrapper a #img-kidcob {
             background-image: url("../../assets/img/kidcob.png");
             background-size: cover;
@@ -655,13 +656,14 @@ footer {
           cursor: pointer;
           padding: 1.05em 1em;
           z-index: 2;
-          font-weight: 300; }
-        /* line 85, ../sass/3-layouts/_drink-block.sass */
+          font-weight: 300;
+          margin: 0; }
+        /* line 86, ../sass/3-layouts/_drink-block.sass */
         .drink-block .wrapper .text .tabs li.current {
           background: rgba(255, 255, 255, 0.1);
           color: #fff;
           font-weight: 400; }
-      /* line 90, ../sass/3-layouts/_drink-block.sass */
+      /* line 91, ../sass/3-layouts/_drink-block.sass */
       .drink-block .wrapper .text .tab-content {
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
@@ -677,9 +679,10 @@ footer {
         margin-top: -0.375px;
         font-size: 1.1em; }
         @media all and (max-width: 450px) {
-          /* line 90, ../sass/3-layouts/_drink-block.sass */
+          /* line 91, ../sass/3-layouts/_drink-block.sass */
           .drink-block .wrapper .text .tab-content {
-            padding: 1em; } }
+            padding: 1em;
+            margin-top: -0.1px; } }
         /* line 106, ../sass/3-layouts/_drink-block.sass */
         .drink-block .wrapper .text .tab-content .review {
           margin: 0;
