--- a/styles/sass/3-layouts/_gallery.sass
+++ b/styles/sass/3-layouts/_gallery.sass
@@ -28,6 +28,7 @@
         &:hover
           transform: scale(1.1)
           cursor: pointer
+          z-index: 2
 
         h2
           +transition(all, .2s, ease-in-out)
