--- a/styles/sass/3-layouts/_drink-block.sass
+++ b/styles/sass/3-layouts/_drink-block.sass
@@ -96,11 +96,11 @@
         background: rgba($white, .1)
         padding: 1.5em 2em
         z-index: 0
-        margin-top: -.375px
+        margin-top: -.3px
         font-size: 1.1em
         @media all and (max-width: 450px)
           padding: 1em
-          margin-top: -.1px
+          //margin-top: -.1px
 
         p
         .review
