--- a/styles/sass/3-layouts/_splash.sass
+++ b/styles/sass/3-layouts/_splash.sass
@@ -35,16 +35,16 @@
       video
         position: absolute
         z-index: 0
-        height: 100%
+        min-height: 100%
         min-width: 100%
         object-fit: cover
 
       #vid-main
-        @media all and (max-width: 860px)
+        @media all and (max-width: 1137px)
           display: none
       #vid-mobile
         display: none
-        @media all and (max-width: 860px)
+        @media all and (max-width: 1137px)
           display: inline-block
 
     .text
@@ -55,7 +55,7 @@
       z-index: 2
       width: 100%
       height: 100%
-      @media all and (max-width: 860px)
+      @media all and (max-width: 1137px)
         display: flex
 
       h1, p
