--- a/styles/sass/3-layouts/_gallery.sass
+++ b/styles/sass/3-layouts/_gallery.sass
@@ -1,22 +1,4 @@
 /* GALLERY STYLES - GALLERY.SASS */
-
-.zoom-background
-  position: absolute
-  top: 0
-  left: 0
-  height: 100%,
-  width: 100%
-  background-size: cover
-  background-position: 50% 50%
-  transition: transform 0.3s ease-in-out
-
-  &:hover
-    extend .zoom-background-hover
-
-.zoom-background-hover
-  transform: scale(1.05)
-  transition-duration: 0.5s
-
 #gallery
   padding: 0
   .wrapper
@@ -37,13 +19,15 @@
         height: 16.667%
 
       .gallery-block
-        +transition(all, .25s, ease-in-out)
         +flex-col
         align-items: flex-end
         justify-content: center
         padding: 0 1em
         width: 100%
         height: 100%
+        overflow: hidden
+        &:hover
+          transform: scale(1.1)
 
         h2
           +transition(all, .2s, ease-in-out)
